# domain/responses/photo/photo.go
@@ -1,0 +1,9 @@
+package photo
+
+type PhotoResponse struct {
+	ID       uint   `json:"id"`
+	Caption  string `json:"caption"`
+	Title    string `json:"title"`
+	PhotoURL string `json:"photo_url"`
+	UserID   uint   `json:"user_id"`
+}
